--- a/starship.toml
+++ b/starship.toml
@@ -42,6 +42,13 @@ symbol = " "
 [git_branch]
 symbol = " "
 
+[git_commit]
+disabled = true
+
+[git_status]
+disabled = true
+
+
 [golang]
 symbol = " "
 
