--- a/tmux.conf
+++ b/tmux.conf
@@ -27,7 +27,8 @@ bind-key x kill-pane
 # Control space + & to kill window
 bind-key & kill-window
 
-set -g detach-on-destroy off  # don't exit from tmux when closing a session
+set -g detach-on-destroy on  # don't exit from tmux when closing a session
+set -g destroy-unattached on
 
 
 bind-key = select-layout even-horizontal
@@ -66,7 +67,7 @@ set -g visual-silence off
 set -g bell-action none
 
 # Scrollback buffer
-set -g history-limit 10000
+set -g history-limit 50000
 
 # allow for navigating between words with option
 set-window-option -g xterm-keys on
@@ -74,8 +75,12 @@ set-window-option -g xterm-keys on
 # command delay? We don't want that, make it short
 set -g escape-time 1
 
+set -g display-time 4000
+
+
+
 # Reduce time to wait for Escape key. You'll want this for neovim.
-set-option escape-time 40
+set-option escape-time 0
 
 # Allow the arrow key to be used immediately after changing windows
 set-option -g repeat-time 10
@@ -89,6 +94,8 @@ set -g renumber-windows on    # renumber windows when a window is closed
 # Update files on focus (using for neovim)
 set -g status-keys emacs
 set -g focus-events on
+setw -g aggressive-resize on
+
 
 #set -g status-right '#{prefix_highlight} #{cpu_temp_bg_color} CPU: #{cpu_percentage} - #{cpu_temp}#{gpu_temp_bg_color} GPU: #{gpu_percentage} - #{gpu_temp} RAM: #{ram_percentage}  | %a %h-%d %H:%M '
 
@@ -109,17 +116,26 @@ if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 set -g @plugin 'joshmedeski/t-smart-tmux-session-manager'
+
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'wfxr/tmux-power'
-set -g @plugin 'jabirali/tmux-tilish'
+set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @plugin '2kabhishek/tmux-tilit'
+
+
+
+
 set -g @t-bind "none"
 
 #set -g @tilish-shiftnum '!"£$%^&*()'
-set -g @tilish-default 'main-vertical'
+#set -g @tilish-default 'main-vertical'
 set -g @tmux_power_theme 'moon'
 set -g @tmux_power_session_icon ''
+set -g @tmux_power_prefix_highlight_pos 'LR'
 
-run -b '~/.tmux/plugins/tpm/tpm'
+run '~/.tmux/plugins/tpm/tpm'
+
 
